package com.example.android.botify.menu.sub.audio

import android.support.v4.media.session.MediaSessionCompat

class AudioServiceCallback : MediaSessionCompat.Callback() {

    override fun onPlay() {
        super.onPlay()
    }

    override fun onPause() {
        super.onPause()
    }

    override fun onStop() {
        super.onStop()
    }
}