@startuml
package "audio" {

    class AudioService {
        LOG_TAG: String!
        mediaPlayer: MediaPlayer?
        mediaSession: MediaSessionCompat?
        audioManager: AudioManager
        audioFocusRequest: AudioFocusRequest
        stateBuilder: PlaybackStateCompat.Builder
        metaDataBuilder: MediaMetadataCompat.Builder
        //audioServiceCallbacks//
        onCreate(): Unit
        onGetRoot(String, Int, Bundle?): MediaBrowserServiceCompat.BrowserRoot
        onLoadChildren(String, MediaBrowserServiceCompat.Result<MutableList<MediaBrowserCompat.MediaItem>>): Unit
        onDestroy(): Unit
    }

    class audioServiceCallbacks <<(O,orange)MediaSessionCompat.Callback()>> {
        currentPosition: Long?
        onPlayFromUri(Uri?, Bundle?): Unit
        onPlay(): Unit
        onPause(): Unit
        onStop(): Unit
    }

    note right: "O" for "Object"
    /' as N1
        audioServiceCallbacks <.. N1
'/
    class AudioFragment {
            LOG_TAG: String!
        binding: FragmentAudioBinding
        audioAdapter: AudioAdapter
        audioList: List<Audio>
        mediaController: MediaControllerCompat
        AudioFragment()
        onAttach(Context): Unit
        onCreateView(LayoutInflater, ViewGroup?, Bundle?): View
        onViewCreated(View, Bundle?): Unit
        onAudioClickListener(Int): Unit
        onStart(): Unit
        onResume(): Unit
        onStop(): Unit
        onDestroy(): Unit
    }
}

' dependencies
'    AudioListener <|-- AudioFragment
    AudioService +-- audioServiceCallbacks

' output layout
'	AudioService -[hidden]-> AudioListener
    AudioFragment -[hidden]->AudioService

@enduml
